--- a/index.html
+++ b/index.html
@@ -6,11 +6,51 @@
   <style>
     /* Basic reset and canvas styling */
     body { margin: 0; background: #000; overflow: hidden; }
-    canvas { display: block; margin: 0 auto; background: #333; }
+    canvas { display: block; margin: 0 auto; background: #333; touch-action: none; }
+    /* Touch controls for mobile */
+    #touch-controls {
+      position: fixed;
+      left: 0; right: 0; bottom: 0;
+      z-index: 1001;
+      display: flex;
+      justify-content: space-between;
+      pointer-events: none;
+    }
+    .touch-btn {
+      pointer-events: auto;
+      background: rgba(40,40,40,0.7);
+      color: #fff;
+      border: 2px solid #fff;
+      border-radius: 16px;
+      font-size: 2.2em;
+      margin: 0.5em;
+      padding: 0.7em 1.2em;
+      min-width: 60px;
+      min-height: 60px;
+      user-select: none;
+      touch-action: none;
+      box-shadow: 0 2px 8px #0008;
+      transition: background 0.2s;
+    }
+    .touch-btn:active {
+      background: #fff;
+      color: #222;
+    }
+    @media (max-width: 700px) {
+      #touch-controls { flex-direction: column; }
+      .touch-btn { font-size: 1.5em; min-width: 44px; min-height: 44px; }
+    }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
+  <!-- Touch controls for mobile -->
+  <div id="touch-controls" style="display:none;">
+    <button class="touch-btn" id="btn-left">⟵</button>
+    <button class="touch-btn" id="btn-accel">▲</button>
+    <button class="touch-btn" id="btn-brake">▼</button>
+    <button class="touch-btn" id="btn-right">⟶</button>
+  </div>
   <script>
   // Game Constants and Initial Setup
   const canvas = document.getElementById('gameCanvas');
@@ -844,9 +884,8 @@
     oscillator.stop(audioCtx.currentTime + duration);
   }
 
-  // Handle browser window resizing for responsiveness
-  window.addEventListener('resize', function() {
-    // Re-size canvas
+  // Responsive canvas for mobile
+  function resizeCanvas() {
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     // Update road dimensions
@@ -862,7 +901,42 @@
     if (!gameStarted || gameOver) {
       drawIntro();
     }
+  }
+  window.addEventListener('resize', resizeCanvas);
+  // Initial resize
+  resizeCanvas();
+
+  // Touch controls for mobile
+  function isMobile() {
+    return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i.test(navigator.userAgent);
+  }
+  const touchControls = document.getElementById('touch-controls');
+  if (isMobile()) {
+    touchControls.style.display = 'flex';
+  }
+  // Touch event handlers
+  function setTouchBtn(id, flag, value) {
+    if (id === 'btn-left') movingLeft = value;
+    if (id === 'btn-right') movingRight = value;
+    if (id === 'btn-accel') {
+      accelerating = value;
+      if (value && player.nitro > 0) player.isBoosting = true;
+      if (!value) player.isBoosting = false;
+    }
+    if (id === 'btn-brake') braking = value;
+  }
+  ['btn-left','btn-right','btn-accel','btn-brake'].forEach(id => {
+    const btn = document.getElementById(id);
+    btn.addEventListener('touchstart', e => { setTouchBtn(id, true, true); e.preventDefault(); });
+    btn.addEventListener('touchend', e => { setTouchBtn(id, false, false); e.preventDefault(); });
+    btn.addEventListener('mousedown', e => { setTouchBtn(id, true, true); });
+    btn.addEventListener('mouseup', e => { setTouchBtn(id, false, false); });
+    btn.addEventListener('mouseleave', e => { setTouchBtn(id, false, false); });
   });
+  // Prevent scrolling/zooming on mobile while playing
+  document.body.addEventListener('touchmove', function(e) {
+    if (gameRunning) e.preventDefault();
+  }, { passive: false });
   </script>
 </body>
 </html> 
